--- a/ParseClient/ParseClient/Base.lproj/Main.storyboard
+++ b/ParseClient/ParseClient/Base.lproj/Main.storyboard
@@ -89,6 +89,9 @@
                                 <frame key="frameInset" minX="270" minY="78" width="36" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Send"/>
+                                <connections>
+                                    <action selector="send:" destination="CLn-PB-k9r" eventType="touchUpInside" id="gaf-Ca-hHc"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q6B-H8-Smd">
                                 <frame key="frameInset" minY="124" width="320" height="402"/>
@@ -101,6 +104,9 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Chat" id="Phl-Qx-Sd6"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="messageText" destination="X8x-Es-UPV" id="6YL-Cf-B8u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H4b-Bh-MD1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
